--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -1,7 +1,5 @@
 {% extends "_base.html" %} 
 
-{% load common_tags %} 
-
 {% block title %} Home {% endblock %} 
 
 {% block main %}
@@ -10,4 +8,4 @@ Welcome!
 
 Ready to laugh?
 
-{% random_joke %} {% endblock %}
+{% endblock %}
