--- a/templates/_base.html
+++ b/templates/_base.html
@@ -6,12 +6,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 <script src="https://kit.fontawesome.com/ada832ef18.js" crossorigin="anonymous"></script>
-<title>{% block title %}{% endblock %} | SITENAME</title>
+<title>{% block title %}{% endblock %} | Play2Learn</title>
 </head>
 <body>
 <header>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">SITENAME</a>
+    <a class="navbar-brand" href="{% url 'pages:homepage' %}">Play2Learn</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse"
       data-target="#navbarSupportedContent" aria-expanded="false"
       aria-controls="navbarSupportedContent" aria-label="Toggle navigation">
@@ -21,7 +21,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home 
+          <a class="nav-link" href="{% url 'pages:homepage' %}">Home 
             <span class="sr-only">(current)</span>
           </a>
         </li>
@@ -38,8 +38,8 @@
             Me
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">My Account</a>
-            <a class="dropdown-item" href="#">My SITENAME</a>
+            <a class="dropdown-item" href="">My Account</a>
+            <a class="dropdown-item" href="#">Play2Learn</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Log out</a>
           </div>
@@ -60,10 +60,10 @@
 </main>
 <footer class="fixed-bottom bg-light row">
     <div class="col">
-      <div class="float-end m-1 me-2">Copyright &copy; 2022 SITENAME.</div>
+      <div class="float-end m-1 me-2">Copyright &copy; 2025 Play2Learn.</div>
       <nav>
         <ul class="nav">
-          <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="{% url 'pages:about-us' %}">About</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
         </ul>
       </nav>
