--- a/templates/_base.html
+++ b/templates/_base.html
@@ -11,7 +11,7 @@
 <body>
 <header>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="{% url 'pages:homepage' %}">Play2Learn</a>
+    <a class="navbar-brand" href="{% url 'pages:home' %}">Play2Learn</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse"
       data-target="#navbarSupportedContent" aria-expanded="false"
       aria-controls="navbarSupportedContent" aria-label="Toggle navigation">
@@ -21,7 +21,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="{% url 'pages:homepage' %}">Home 
+          <a class="nav-link" href="{% url 'pages:home' %}">Home 
             <span class="sr-only">(current)</span>
           </a>
         </li>
@@ -63,7 +63,7 @@
       <div class="float-end m-1 me-2">Copyright &copy; 2025 Play2Learn.</div>
       <nav>
         <ul class="nav">
-          <li class="nav-item"><a class="nav-link" href="{% url 'pages:about-us' %}">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="{% url 'pages:about_us' %}">About</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
         </ul>
       </nav>
